document/api-allow-monitor-8000.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: api-allow-monitor-8000
spec:
  podSelector:
    matchLabels:
      app: apiserver
  ingress:
  - ports:
    - port: 8000
    from:
    - podSelector:
        matchLabels:
          role: monitor
