document/api-allow-napas.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: api-allow-napas-trafic
spec:
  podSelector:
    matchLabels:
      app: apiserver
  ingress:
  - ports:
    - port: 5000
    from:
      - namespaceSelector: {}
        podSelector:
          matchLabels:
            app: napas
