document/authen-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: authen-policy
spec:
  podSelector:
    matchLabels:
      app: authentication
  ingress:
  - {}
