document/system-allow.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: system-allow
spec:
  podSelector:
    matchLabels:
      app: system
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: apiserver
